# pyspark-ast-lineage

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/: example_data_processing.py
src/pyspark_ast_lineage/: __main__.py  cli.py
src/pyspark_ast_lineage/analyzer/: pyspark_tables_extractor.py
src/pyspark_ast_lineage/analyzer/extractors/: __init__.py  base.py  read_extractor.py  registry.py  sql_extractor.py  table_extractor.py  write_extractor.py
src/pyspark_ast_lineage/analyzer/utils/: extractor_factory.py  safe_evaluator.py  variable_tracker.py
src/pyspark_ast_lineage/analyzer/utils/evaluators/: __init__.py  eval_attribute.py  eval_binop.py  eval_boolop.py  eval_call_dict_methods.py  eval_call_string_methods.py  eval_ifexp.py  eval_joinedstr.py  eval_name.py  eval_subscript.py
src/spark_ast_lineage/: __main__.py  cli.py
src/spark_ast_lineage/analyzer/: extractor_factory.py  pyspark_tables_extractor.py  safe_evaluator.py  variable_tracker.py
src/spark_ast_lineage/analyzer/extractors/: __init__.py  read_extractor.py  sql_extractor.py  table_extractor.py  write_extractor.py
src/spark_ast_lineage/analyzer/utils/: safe_evaluator.py  variable_tracker.py
src/spark_ast_lineage/analyzer/utils/evaluators/: eval_attribute.py  eval_binop.py  eval_boolop.py  eval_call_dict_methods.py  eval_call_string_methods.py  eval_ifexp.py  eval_joinedstr.py  eval_name.py  eval_subscript.py  registry.py
tests/: test_analyzer.py
tests/analyzer/extractors/: test_read_extractor.py  test_sql_extractor.py  test_table_extractor.py  test_write_extractor.py
tests/analyzer/pyspark_tables_extractor/: test_extract_variables.py
tests/extractors/: test_table_extractor.py
